--- a/iam-front/signup.html
+++ b/iam-front/signup.html
@@ -141,7 +141,7 @@
 		
 		function loginAttempt(un, up){
 			$.ajax({
-				url: "http://localhost/iam/api/v1/accounts",
+				url: "http://dev.imaicloud.com/iam/api/v1/accounts",
 				type: "post",
 				contentType: "application/json; charset=utf-8",
 				data: JSON.stringify({"email": un,"password": up}),
